Update 120-build-integrations.md
Updating the example to Gradle 1.8 syntax; added options for running a single test and to include stdout and errout in test results. Also demonstrates how to increase memory and filter the stacktrace output.